Add cookies, add helmet, refactor routes+database

--- a/m03w07/views/notes/index.ejs
+++ b/m03w07/views/notes/index.ejs
@@ -13,3 +13,6 @@
         <% } %>
 </ul>
 <a href="/notes/new">New note</a>
+<form action="/api/auth/logout" method="POST">
+    <button type="submit">Logout</button>
+</form>
